--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,35 @@
         android:layout_below="@id/searchBtn"
         android:layout_alignEnd="@id/fragment_map"
         />
+<!--    START AND STOP BUTTONS ADDED-->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/idStop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/app_name"
+        android:padding="4dp"
+        app:fabSize="normal"
+        app:backgroundTint="@color/colorPrimaryDark"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_baseline_stop_24"
+        android:layout_above="@id/idStart"
+        />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/idStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/app_name"
+        android:padding="4dp"
+        app:fabSize="normal"
+        app:backgroundTint="@color/colorPrimaryDark"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_baseline_navigation_24"
+        android:layout_above="@id/idFABFeedback"
+        />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idFABFeedback"
         android:layout_width="wrap_content"
